gen/firestore/v1beta2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-firestore1_beta2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/firestore/v1beta2/lib)
error[E0423]: expected value, found struct `databases::DatabasesActions`
    --> gen/firestore/v1beta2/lib/src/lib.rs:1169:13
     |
1169 |             databases::DatabasesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `databases::DatabasesActions { /* fields */ }`?

error[E0423]: expected value, found struct `collection_groups::CollectionGroupsActions`
    --> gen/firestore/v1beta2/lib/src/lib.rs:1229:17
     |
1229 |                 collection_groups::CollectionGroupsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `collection_groups::CollectionGroupsActions { /* fields */ }`?

error[E0423]: expected value, found struct `fields::FieldsActions`
    --> gen/firestore/v1beta2/lib/src/lib.rs:1505:21
     |
1505 |                     fields::FieldsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^ did you mean `fields::FieldsActions { /* fields */ }`?

error[E0423]: expected value, found struct `indexes::IndexesActions`
    --> gen/firestore/v1beta2/lib/src/lib.rs:1509:21
     |
1509 |                     indexes::IndexesActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `indexes::IndexesActions { /* fields */ }`?

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-firestore1_beta2`.

To learn more, run the command again with --verbose.
